@@ -377,14 +377,6 @@ package Perlito5::AST::Sub;
     }
 }
 
-package Perlito5::AST::Use;
-{
-    sub emit_compile_time {
-        my $self = shift;
-        return $self;
-    }
-}
-
 1;
 
 =begin
